Preview are loaded asynchronously to avoid UI freezes during load and refresh